OpenLDAP 2.2 Change Log

OpenLDAP 2.2.19 Engineering
	Fixed slapd check for mandatory filter in authz-regexp URI (ITS#3396)
	Fixed back-ldap malformed URI check for multiple URIs (ITS#3399)
	Fixed back-ldap/back-meta static definition of be_open() (ITS#3387)
	Build Environment
		Updated BDB mismatch messages

OpenLDAP 2.2.18 Release
	Fixed libldap schema keyword sensitivity (ITS#3334)
	Fixed libldap DN filter sensitivity (ITS#3334)
	Fixed libldap intermediate response tags
	Fixed slapd matching rule name sensitivity (ITS#3334)
	Fixed slapd multiple value delete (ITS#3346)
	Fixed slapd referral memory leak
	Fixed slapd mods2entry memory leak
	Fixed slapd psearch consistency bug
	Updated back-sql
	Documentation
		Updated release documents

OpenLDAP 2.2.17 Release
	Fixed slapd syncrepl memory leak bugs
	Documentation
		Updated ldif(5)

OpenLDAP 2.2.16 Release
	Fixed libldap getaddrinfo hints portability bug (ITS#3279)
	Fixed libldap find_connection bug (ITS#3280)
	Fixed libldap SASL host connected to bug (ITS#3298)
	Fixed libldap SASL proper sockbuf bug
	Fixed libldap results lc bug (ITS#3250)
	Fixed ldapsearch paged results size 0 bug 
	Fixed slapd syncrepl SSF propagation bug (ITS#3131)
	Fixed slapd ACL sets bug (ITS#3140)
	Fixed slapd bind referral bug (ITS#3264)
	Fixed slapd syncrepl misc bugs (ITS#3259,3297)
	Fixed slapd overlays CSN CTX bug (ITS#3288)
	Fixed slapd sun_path portability bug
	Fixed slapd permissive modify bug
	Fixed slapd hang bug (ITS#3309)
	Fixed slapcommon shutdown bug (ITS#3326)
	Fixed back-bdb CSN CTX bug (ITS#3301)
	Fixed back-bdb id2entry bug
	Fixed back-bdb syncrepl psearch delete bug (ITS#3309)
	Fixed back-ldap/meta known controls bugs (ITS#3291)
	Fixed back-monitor syncrepl bug (ITS#3265)
	Fixed slurpd replog error message bug (ITS#3275)
	Added slapd syncrepl exattrs (ITS#3289)
	Updated slapd SLAPI
	Updated LDAP C++ library
	Documentation
		Updated provided RFCs and I-Ds
		Updated ldap_url(3) (ITS#3310)

OpenLDAP 2.2.15 Release