@@ -2,6 +2,7 @@ OpenLDAP 2.2 Change Log
 
 OpenLDAP 2.2.19 Engineering
 	Fixed slapd check for mandatory filter in authz-regexp URI (ITS#3396)
+	Fixed slapd ACI when the subject contains '#' (ITS#3303)
 	Fixed back-ldap malformed URI check for multiple URIs (ITS#3399)
 	Fixed back-ldap/back-meta static definition of be_open() (ITS#3387)
 	Build Environment
